<resources>
    <string name="app_name">PiggyBank</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="title_activity_child_main">ChildMainActivity</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_create_child_account">CreateChildAccountActivity</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="child_s_password">Child\'s Password</string>
    <string name="verify_your_password">Verify Your Password</string>
    <string name="title_activity_child_overview">ChildOverviewActivity</string>
    <string name="balance">Balance:</string>
    <string name="title_activity_tasks_parent">tasksParentActivity</string>
    <string name="tasks">Tasks:</string>
    <string name="transactions">Transactions:</string>
    <string name="create_task">Create Task</string>
    <string name="tasksButton">Tasks</string>
    <string name="overviewButton">Overview</string>
    <string name="transactionsButton">Transactions</string>
    <string name="noMoney">$0.00</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="description">Description</string>
    <string name="payment">Payment</string>
    <string name="title_activity_task_details_parent">TaskDetailsParentActivity</string>
    <string name="paymentText">Payment:</string>
    <string name="mark_task_confirmed_and_pay_due_ammount">Confirm Task And Pay Due Amount</string>
    <string name="temp">temp</string>
    <string name="status">Status:</string>
    <string name="click_on_a_task_to_view_details">Click on a task to view details.</string>
    <string name="see_all_tasks">See All Tasks</string>
    <string name="click_on_a_transaction_to_view_details">Click on a transaction to view details.</string>
    <string name="see_all_transactions">See All Transactions</string>
    <string name="no_transactions_avaliable">No transactions available</string>
    <string name="piggybank">PiggyBank</string>
    <string name="create_child_account">Create Child Account</string>
    <string name="title_activity_transactions_parent">TransactionsParentActivity</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="no_tasks_avaliable">No tasks avaliable</string>
    <string name="title_activity_create_transaction">CreateTransactionActivity</string>
    <string name="title_activity_transaction_details_parent">TransactionDetailsParentActivity</string>
    <string name="this_transaction_was_requested_but_not_yet_completed">* This transaction was requested but not yet completed.</string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="title_activity_wish_list_parent">WishListParentActivity</string>
    <string name="click_on_an_item_to_view_details">Click on an item to view details.</string>
    <string name="no_wish_list_items_avaliable">No wish list items available</string>
    <string name="wish_list">Wish List:</string>
    <string name="see_entire_wish_list">See entire wish list</string>
    <string name="title_activity_wish_list_item_details_parent">WishListItemDetailsParentActivity
    </string>
    <string name="delete_this_task">Delete This Task</string>
    <string name="title_activity_tasks_child_overview">TasksChildOverview</string>
    <string name="title_activity_task_details_child">TaskDetailsChildActivity</string>
    <string name="child_task_completed">Complete Task</string>
    <string name="title_activity_transactions_child">TransactionsChildActivity</string>
    <string name="request_transaction">Request Transaction</string>
    <string name="title_activity_request_transaction">RequestTransactionActivity</string>
    <string name="title_activity_transaction_details_child">TransactionDetailsChildActivity</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_wish_list_child">WishListChildActivity</string>
    <string name="create_wish_list_item">Create Wish List Item</string>
    <string name="title_activity_wish_list_item_details_child">WishListItemDetailsChildActivity
    </string>
    <string name="title_activity_create_wish_list_item">CreateWishListItemActivity</string>
</resources>
