<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DB7093"
    tools:context=".ChildActivities.TaskDetailsChildActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            android:id="@+id/taskDetailedNameChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_task_details_child"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/linearLayout600"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:paddingRight="10dp"
                android:text="@string/status"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/taskDetailedStatusChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/paymentText"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/taskDetailedPaymentChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/noMoney"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="24sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/taskDetailedDescriptionChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/description"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/confirmTaskButton2"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="markConfirmed"
            android:text="@string/child_task_completed"
            android:textColor="@color/design_default_color_primary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>