<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DB7093"
    tools:context=".ParentActivities.CreateChildAccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#C71585"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/common_google_signin_btn_text_dark_pressed" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <EditText
            android:id="@+id/childNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/childEmailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/childPasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/child_s_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/parentPasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/verify_your_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createChildAccountButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:onClick="createChildAccount"
            android:text="@string/create_account"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>